Implement hidden and footer attributes